# desec-dns

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  desec-dns.py  desec.py  pyproject.toml  requirements.txt  tox.ini
.github/: release.yml
.github/workflows/: check-encoding.sh  check_encoding.yml  code_quality.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
.github/workflows/matchers/: mypy.json  ruff.json
desec/: __init__.py  __main__.py  api.py  cli.py  exceptions.py  tlsa.py  types.py  utils.py
tests/: README.md  conftest.py  test_api_misc.py  test_domain.py  test_exception.py  test_misc.py  test_record.py  test_tlsa.py  test_token.py  test_token_policy.py  test_zonefile.py
tests/cassettes/test_api_misc/: test_invalid_authentication.yaml  test_invalid_authorization.yaml  test_pagination.yaml  test_rate_limit_blocking.yaml  test_rate_limit_non_blocking.yaml
tests/cassettes/test_domain/: test_delete_domain.yaml  test_domain_info.yaml  test_export_zonefile_domain.yaml  test_list_domains.yaml  test_new_domain.yaml  test_new_domain_invalid_name.yaml
tests/cassettes/test_exception/: test_not_found_error.yaml  test_not_found_error_non_json.yaml  test_parameter_error_list.yaml  test_parameter_error_single.yaml
tests/cassettes/test_record/: test_add_record[].yaml  test_add_record[test].yaml  test_add_record_invalid_type.yaml  test_change_record_missing.yaml  test_change_record_rdata.yaml  test_change_record_rdata_ttl.yaml  test_change_record_ttl.yaml  test_delete_record_full.yaml  test_delete_record_partial.yaml  test_delete_record_partial_missing.yaml  test_get_records[None-A].yaml  test_get_records[None-None].yaml  test_get_records[test-A].yaml  test_get_records[test-None].yaml  test_get_records_no_match[A-negative-test].yaml  test_get_records_no_match[AAAA-None].yaml  test_get_records_no_match[AAAA-negative-test].yaml  test_get_records_no_match[AAAA-test].yaml  test_get_records_no_match[None-negative-test].yaml  test_update_bulk_records_exclusive.yaml  test_update_bulk_records_non_exclusive.yaml  test_update_record_existing.yaml  test_update_record_existing_no_ttl.yaml  test_update_record_new.yaml  test_update_record_new_no_ttl.yaml
tests/cassettes/test_token/: test_create_token[all_subnets].yaml  test_create_token[auto_policy].yaml  test_create_token[named].yaml  test_create_token[no_auto_policy].yaml  test_create_token[no_perm_create_domain].yaml  test_create_token[no_perm_delete_domain].yaml  test_create_token[no_perm_manage_tokens].yaml  test_create_token[perm_create_domain].yaml  test_create_token[perm_delete_domain].yaml  test_create_token[perm_manage_tokens].yaml  test_create_token[restricted_subnets].yaml  test_create_token[simple].yaml  test_delete_token.yaml  test_list_tokens.yaml  test_modify_token[auto_policy].yaml  test_modify_token[named].yaml  test_modify_token[no_auto_policy].yaml  test_modify_token[no_perm_create_domain].yaml  test_modify_token[no_perm_delete_domain].yaml  test_modify_token[no_perm_manage_tokens].yaml  test_modify_token[perm_create_domain].yaml  test_modify_token[perm_delete_domain].yaml  test_modify_token[perm_manage_tokens].yaml  test_modify_token[restricted_subnets].yaml  test_modify_token[simple].yaml
tests/cassettes/test_token_policy/: test_add_token_policy[False-A-None-None].yaml  test_add_token_policy[False-A-None-domain].yaml  test_add_token_policy[False-A-test-None].yaml  test_add_token_policy[False-A-test-domain].yaml  test_add_token_policy[False-None-None-None].yaml  test_add_token_policy[False-None-None-domain].yaml  test_add_token_policy[False-None-test-None].yaml  test_add_token_policy[False-None-test-domain].yaml  test_add_token_policy[True-A-None-None].yaml  test_add_token_policy[True-A-None-domain].yaml  test_add_token_policy[True-A-test-None].yaml  test_add_token_policy[True-A-test-domain].yaml  test_add_token_policy[True-None-None-None].yaml  test_add_token_policy_conflict.yaml  (+80 more)
tests/files/: test-suite.test_invalid.zone  test-suite.test_valid.zone  test_tlsa_record.der  test_tlsa_record.pem  test_tlsa_record_expired.pem
